# tigerflow

./: .coverage  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml  versions.json
.claude/: settings.json
.claude/commands/: add-task.md  debug-pipeline.md  docs.md  lint.md  pr-checklist.md  review.md  test-pipeline.md  test.md
.github/workflows/: cd.yml  ci.yml
0.1/: 404.html  index.html
0.1/search/: search_index.json
0.2/search/: search_index.json
0.3/: index.html
docs/: mkdocs.yml
docs/mkdocs/: index.md
examples/: README.md
examples/audio_feature_extraction/: README.md
examples/simple_pipeline_local/: README.md
examples/simple_pipeline_slurm/: README.md
next/: 404.html  index.html
next/search/: search_index.json
src/tigerflow/: cli.py  conditions.py  config.py  logconfig.py  models.py  pipeline.py  settings.py  staging.py  tasks.py  utils.py
tests/: conftest.py  test_cli_background.py  test_cli_tasks.py  test_conditions.py  test_models.py  test_staging.py  test_tasks.py  test_utils.py
tests/integration/: __init__.py  conftest.py  test_local_async_task.py  test_local_task.py  test_process_management.py  test_slurm_task.py
tests/manual/: README.md  conftest.py  run_pipeline.py
tests/tasks/: async_echo.py  async_failing.py  failing.py  slurm_echo.py  slurm_failing.py  slurm_failing_setup.py
tests/unit/: test_models.py  test_settings.py  test_staging.py  test_tasks.py  test_utils.py
tests/user/: README.md  run_pipeline.py  slow_task.py  slow_task_async.py  slow_task_slurm.py
(+55 files in other folders)
