[project]
name = "tigerflow"
version = "0.1.0a3"
description = "Data pipeline framework for Slurm-managed HPC clusters"
readme = "README.md"
authors = [
    { name = "Sangyoon Park", email = "datumvitae@gmail.com" }
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10,<3.14"
dependencies = [
    "aiofiles>=24.1.0",
    "dask-jobqueue>=0.9.0",
    "loguru>=0.7.3",
    "networkx>=3.4.2",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0.2",
    "typer>=0.16.0",
]

[project.urls]
Repository = "https://github.com/princeton-ddss/tigerflow"
Documentation = "https://princeton-ddss.github.io/tigerflow/latest"

[project.scripts]
tigerflow = "tigerflow:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    {include-group = "docs"},
    {include-group = "test"},
]
docs = [
    "mike>=2.1.3",
    "mkdocs-material>=9.7.0",
]
test = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
